# aivr-ai-mobile-host

./: CMakeLists.txt  README.md  build.cmd  deploy.ps1  deploy.sh  doctor.cmd  run-debug.cmd  setup-env.cmd
.docs/: features.json
.mobile/: .flutter-plugins  pubspec.yaml
.mobile/android/app/src/main/: AndroidManifest.xml
.mobile/ios/Runner.xcodeproj/: project.pbxproj
.mobile/lib/: aivr_core_bridge.dart  auth_client.dart  credential_store.dart  device_capabilities.dart  device_capabilities_data.dart  device_identity.dart  farm_command_handler.dart  farm_connection.dart  main.dart  main_headless.dart  main_preview.dart  models.dart  node_state.dart  swarm_service.dart
.mobile/lib/screens/: pairing_screen.dart  status_dashboard.dart
docs/: API_SPEC.md  ARCHITECTURE.md  HARDWARE_SPEC.md
src/: mobile_bridge.cpp
tests/: test_mobile_bridge.cpp
